<package>
    <name>mapping_scavislam</name>
    <version>0.1.0</version>
    <description>
        Mapping using Double Window Optimization, based on ScaViSLAM.
    </description>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>scavislam_ros</run_depend>
    <run_depend>scavislam_rviz</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
