<package>
    <name>scavislam_messages</name>
    <version>0.1.0</version>
    <description>ROS messages for ScaViSLAM library</description>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <build_depend>geometry_msgs</build_depend>
</package>
