<package>
    <name>scavislam_ros</name>
    <version>0.1.0</version>
    <description>ROS components to communicate with ScaViSLAM library</description>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>ScaViSLAM</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>image_geometry</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>eigen_conversions</build_depend>

    <run_depend>ScaViSLAM</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>image_geometry</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>eigen_conversions</run_depend>
</package>
