<package>
    <name>scavislam_rviz</name>
    <version>0.1.0</version>
    <description>
        Visualizers for scavislam
    </description>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <license>BSD</license>

    <author>contradict</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rviz</build_depend>
    <build_depend>scavislam_messages</build_depend>
    <build_depend>scavislam_ros</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>ScaViSLAM</build_depend>
    <build_depend>eigen_conversions</build_depend>

    <run_depend>rviz</run_depend>
    <run_depend>scavislam_messages</run_depend>
    <run_depend>scavislam_ros</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>ScaViSLAM</run_depend>
    <run_depend>eigen_conversions</run_depend>

    <export>
        <rosdoc config="${prefix}/rosdoc.yaml"/>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
